Closed
Bug 674085
Opened 14 years ago
Closed 14 years ago
TI+JM: Assertion failure: [infer failure] Missing type pushed 0: float, at jsinfer.cpp:331
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
--
function f(x) {
for (var i = 0; i < 50; i++) {};
[1][arguments[0]]++;
x = 1.2;
}
f(0);
--
$ ./js -n -m test.js
Missing type at #2:00039 pushed 0: float
Assertion failure: [infer failure] Missing type pushed 0: float, at jsinfer.cpp:331
Revision 62f32efb087c, 32-bit OS X.
Comment 1•14 years ago
|
||
Mark an unknown result when the value output of FetchElementId is not an integer, rather than the resulting id. (Somehow thought that FetchElementId canonicalized doubles/string values representable as integers, should have tested).
http://hg.mozilla.org/projects/jaegermonkey/rev/c8e6ad4e09d1
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•