[INFER] Mark overflows on TOID when result value is a non-integer, bug 674085.